login screen now visible when not signed in. user persistence fixed

--- a/app/assets/stylesheets/header.css
+++ b/app/assets/stylesheets/header.css
@@ -49,3 +49,7 @@
    border-radius: 2px;
    margin-left: 20px;
  }
+
+ .welcome-message {
+	 margin-top: 60px;
+ }
